monaco/src/gen/DatalogParser.js
// Generated from Datalog.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import DatalogListener from './DatalogListener.js';
import DatalogVisitor from './DatalogVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class DatalogParser extends antlr4.Parser {

    static grammarFileName = "Datalog.g4";
    static literalNames = [ null, "'trusting'", "','", "'authority'", "'previous'", 
                            "'ed25519'", "';'", "'('", "')'", "'<-'", "'check'", 
                            "'if'", "'all'", "'or'", "'allow'", "'deny'", 
                            "'!'", "'*'", "'/'", "'+'", "'-'", "'||'", "'&&'", 
                            "'>='", "'<='", "'>'", "'<'", "'=='", "'['", 
                            "']'", null, null, null, null, null, null, null, 
                            null, null, null, "'/*'", "'*/'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "VARIABLE", 
                             "STRING", "NUMBER", "BYTES", "PUBLICKEYBYTES", 
                             "BOOLEAN", "DATE", "METHOD_INVOCATION", "NAME", 
                             "SINGLE_LINE_COMMENT", "DELIMITED_COMMENT_START", 
                             "DELIMITED_COMMENT_END", "DELIMITED_COMMENT", 
                             "WS" ];
    static ruleNames = [ "origin_clause", "origin_element", "signature_alg", 
                         "authorizer", "authorizer_element", "block", "block_element", 
                         "fact", "rule_", "check", "policy", "rule_body", 
                         "rule_body_element", "predicate", "expression", 
                         "term", "fact_term", "set_term", "set" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = DatalogParser.ruleNames;
        this.literalNames = DatalogParser.literalNames;
        this.symbolicNames = DatalogParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 14:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 6);
    		case 1:
    			return this.precpred(this._ctx, 5);
    		case 2:
    			return this.precpred(this._ctx, 4);
    		case 3:
    			return this.precpred(this._ctx, 3);
    		case 4:
    			return this.precpred(this._ctx, 7);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	origin_clause() {
	    let localctx = new Origin_clauseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, DatalogParser.RULE_origin_clause);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 38;
	        this.match(DatalogParser.T__0);
	        this.state = 39;
	        this.origin_element();
	        this.state = 44;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 40;
	            this.match(DatalogParser.T__1);
	            this.state = 41;
	            this.origin_element();
	            this.state = 46;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	origin_element() {
	    let localctx = new Origin_elementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, DatalogParser.RULE_origin_element);
	    try {
	        this.state = 52;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 3:
	            localctx = new OriginElementAuthorityContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 47;
	            this.match(DatalogParser.T__2);
	            break;
	        case 4:
	            localctx = new OriginElementPreviousContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 48;
	            this.match(DatalogParser.T__3);
	            break;
	        case 5:
	            localctx = new OriginElementPublicKeyContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 49;
	            this.signature_alg();
	            this.state = 50;
	            this.match(DatalogParser.PUBLICKEYBYTES);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	signature_alg() {
	    let localctx = new Signature_algContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, DatalogParser.RULE_signature_alg);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 54;
	        this.match(DatalogParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	authorizer() {
	    let localctx = new AuthorizerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, DatalogParser.RULE_authorizer);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 10)) & ~0x1f) === 0 && ((1 << (_la - 10)) & 268435505) !== 0)) {
	            this.state = 56;
	            this.authorizer_element();
	            this.state = 61;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	authorizer_element() {
	    let localctx = new Authorizer_elementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, DatalogParser.RULE_authorizer_element);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 66;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 62;
	            this.policy();
	            break;

	        case 2:
	            this.state = 63;
	            this.check();
	            break;

	        case 3:
	            this.state = 64;
	            this.fact();
	            break;

	        case 4:
	            this.state = 65;
	            this.rule_();
	            break;

	        }
	        this.state = 68;
	        this.match(DatalogParser.T__5);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, DatalogParser.RULE_block);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 73;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===10 || _la===38) {
	            this.state = 70;
	            this.block_element();
	            this.state = 75;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block_element() {
	    let localctx = new Block_elementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, DatalogParser.RULE_block_element);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 76;
	            this.check();
	            break;

	        case 2:
	            this.state = 77;
	            this.fact();
	            break;

	        case 3:
	            this.state = 78;
	            this.rule_();
	            break;

	        }
	        this.state = 81;
	        this.match(DatalogParser.T__5);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fact() {
	    let localctx = new FactContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, DatalogParser.RULE_fact);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 83;
	        this.match(DatalogParser.NAME);
	        this.state = 84;
	        this.match(DatalogParser.T__6);
	        this.state = 85;
	        this.fact_term();
	        this.state = 90;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 86;
	            this.match(DatalogParser.T__1);
	            this.state = 87;
	            this.fact_term();
	            this.state = 92;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 93;
	        this.match(DatalogParser.T__7);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rule_() {
	    let localctx = new Rule_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, DatalogParser.RULE_rule_);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this.predicate();
	        this.state = 96;
	        this.match(DatalogParser.T__8);
	        this.state = 97;
	        this.rule_body();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	check() {
	    let localctx = new CheckContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, DatalogParser.RULE_check);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 99;
	        this.match(DatalogParser.T__9);
	        this.state = 100;
	        localctx.kind = this._input.LT(1);
	        _la = this._input.LA(1);
	        if(!(_la===11 || _la===12)) {
	            localctx.kind = this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 101;
	        this.rule_body();
	        this.state = 106;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===13) {
	            this.state = 102;
	            this.match(DatalogParser.T__12);
	            this.state = 103;
	            this.rule_body();
	            this.state = 108;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	policy() {
	    let localctx = new PolicyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, DatalogParser.RULE_policy);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        localctx.kind = this._input.LT(1);
	        _la = this._input.LA(1);
	        if(!(_la===14 || _la===15)) {
	            localctx.kind = this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 110;
	        this.match(DatalogParser.T__10);
	        this.state = 111;
	        this.rule_body();
	        this.state = 116;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===13) {
	            this.state = 112;
	            this.match(DatalogParser.T__12);
	            this.state = 113;
	            this.rule_body();
	            this.state = 118;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rule_body() {
	    let localctx = new Rule_bodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, DatalogParser.RULE_rule_body);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119;
	        this.rule_body_element();
	        this.state = 124;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 120;
	            this.match(DatalogParser.T__1);
	            this.state = 121;
	            this.rule_body_element();
	            this.state = 126;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 128;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 127;
	            this.origin_clause();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rule_body_element() {
	    let localctx = new Rule_body_elementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, DatalogParser.RULE_rule_body_element);
	    try {
	        this.state = 132;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 38:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 130;
	            this.predicate();
	            break;
	        case 7:
	        case 16:
	        case 28:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 35:
	        case 36:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 131;
	            this.expression(0);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	predicate() {
	    let localctx = new PredicateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, DatalogParser.RULE_predicate);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this.match(DatalogParser.NAME);
	        this.state = 135;
	        this.match(DatalogParser.T__6);
	        this.state = 136;
	        this.term();
	        this.state = 141;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 137;
	            this.match(DatalogParser.T__1);
	            this.state = 138;
	            this.term();
	            this.state = 143;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 144;
	        this.match(DatalogParser.T__7);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 28;
	    this.enterRecursionRule(localctx, 28, DatalogParser.RULE_expression, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 16:
	            localctx = new ExpressionUnaryContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 147;
	            this.match(DatalogParser.T__15);
	            this.state = 148;
	            this.expression(9);
	            break;
	        case 7:
	            localctx = new ExpressionParenthesesContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 149;
	            this.match(DatalogParser.T__6);
	            this.state = 150;
	            this.expression(0);
	            this.state = 151;
	            this.match(DatalogParser.T__7);
	            break;
	        case 28:
	        case 31:
	        case 32:
	        case 33:
	        case 35:
	        case 36:
	            localctx = new ExpressionTermContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 153;
	            this.fact_term();
	            break;
	        case 30:
	            localctx = new ExpressionVariableContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 154;
	            this.match(DatalogParser.VARIABLE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 185;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 183;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ExpressionMultContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DatalogParser.RULE_expression);
	                    this.state = 157;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 158;
	                    localctx.mult = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===17 || _la===18)) {
	                        localctx.mult = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 159;
	                    this.expression(7);
	                    break;

	                case 2:
	                    localctx = new ExpressionAddContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DatalogParser.RULE_expression);
	                    this.state = 160;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 161;
	                    localctx.add = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===19 || _la===20)) {
	                        localctx.add = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 162;
	                    this.expression(6);
	                    break;

	                case 3:
	                    localctx = new ExpressionLogicContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DatalogParser.RULE_expression);
	                    this.state = 163;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 164;
	                    localctx.logic = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===21 || _la===22)) {
	                        localctx.logic = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 165;
	                    this.expression(5);
	                    break;

	                case 4:
	                    localctx = new ExpressionCompContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DatalogParser.RULE_expression);
	                    this.state = 166;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 167;
	                    localctx.comp = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 260046848) !== 0))) {
	                        localctx.comp = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 168;
	                    this.expression(4);
	                    break;

	                case 5:
	                    localctx = new ExpressionMethodContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DatalogParser.RULE_expression);
	                    this.state = 169;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 170;
	                    this.match(DatalogParser.METHOD_INVOCATION);
	                    this.state = 171;
	                    this.match(DatalogParser.T__6);
	                    this.state = 180;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    if(((((_la - 28)) & ~0x1f) === 0 && ((1 << (_la - 28)) & 445) !== 0)) {
	                        this.state = 172;
	                        this.term();
	                        this.state = 177;
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                        while(_la===2) {
	                            this.state = 173;
	                            this.match(DatalogParser.T__1);
	                            this.state = 174;
	                            this.term();
	                            this.state = 179;
	                            this._errHandler.sync(this);
	                            _la = this._input.LA(1);
	                        }
	                    }

	                    this.state = 182;
	                    this.match(DatalogParser.T__7);
	                    break;

	                } 
	            }
	            this.state = 187;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,17,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	term() {
	    let localctx = new TermContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, DatalogParser.RULE_term);
	    try {
	        this.state = 190;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 28:
	        case 31:
	        case 32:
	        case 33:
	        case 35:
	        case 36:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 188;
	            this.fact_term();
	            break;
	        case 30:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 189;
	            this.match(DatalogParser.VARIABLE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fact_term() {
	    let localctx = new Fact_termContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, DatalogParser.RULE_fact_term);
	    try {
	        this.state = 194;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 31:
	        case 32:
	        case 33:
	        case 35:
	        case 36:
	            localctx = new SetTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 192;
	            this.set_term();
	            break;
	        case 28:
	            localctx = new SetFactTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 193;
	            this.set();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	set_term() {
	    let localctx = new Set_termContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, DatalogParser.RULE_set_term);
	    try {
	        this.state = 201;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 35:
	            localctx = new BooleanFactTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 196;
	            this.match(DatalogParser.BOOLEAN);
	            break;
	        case 31:
	            localctx = new StringFactTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 197;
	            this.match(DatalogParser.STRING);
	            break;
	        case 32:
	            localctx = new NumberFactTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 198;
	            this.match(DatalogParser.NUMBER);
	            break;
	        case 33:
	            localctx = new BytesFactTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 199;
	            this.match(DatalogParser.BYTES);
	            break;
	        case 36:
	            localctx = new DateFactTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 200;
	            this.match(DatalogParser.DATE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	set() {
	    let localctx = new SetContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, DatalogParser.RULE_set);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 203;
	        this.match(DatalogParser.T__27);
	        this.state = 212;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 28)) & ~0x1f) === 0 && ((1 << (_la - 28)) & 441) !== 0)) {
	            this.state = 204;
	            this.fact_term();
	            this.state = 209;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 205;
	                this.match(DatalogParser.T__1);
	                this.state = 206;
	                this.set_term();
	                this.state = 211;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 214;
	        this.match(DatalogParser.T__28);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}
